tests/error/modifier_errors/higher_order.err
Error: Dagger constraint violation (at $FILE:11:4)
   | 
 9 | @guppy(dagger=True)
10 | def test_ho(f: Callable[[qubit], None] @ effects(), q: qubit) -> None:
11 |     f(q)
   |     ^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
